--- a/_config.yml
+++ b/_config.yml
@@ -11,8 +11,9 @@
 # https://mmistakes.github.io/minimal-mistakes/docs/quick-start-guide/#installing-the-theme
 
 # theme                  : "minimal-mistakes-jekyll"
-remote_theme             : mmistakes/minimal-mistakes@4.24.0
-minimal_mistakes_skin    : "aqua"
+remote_theme             : "mmistakes/minimal-mistakes@4.24.0"
+minimal_mistakes_skin    : "aqua"     
+# "default" "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -21,9 +22,11 @@ title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chathuri Jayaweera"
 description              : "An amazing website."
-URL                      : "https://chestnutjay.github.io/"  # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+URL                      : "https://chestnutjay.github.io/"  
+# the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
-repository               : "chestnutjay/chestnutjay.github.io" # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository               : "chestnutjay/chestnutjay.github.io" 
+# GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/yourname2.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
