--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ name                     : "Chathuri Jayaweera"
 description              : "An amazing website."
 URL                      : "https://chestnutjay.github.io/"  
 # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : # the subpath of your site, e.g. "/blog"
+baseurl                  : "/about" # the subpath of your site, e.g. "/blog"
 repository               : "chestnutjay/chestnutjay.github.io" 
 # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : "/assets/images/yourname2.png"
