Added UF logo and changed the ordering of teaching assistance positions and renamed the file to academic.md

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  - title: "Academic"
+    url: /academic/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
