changed profile pic

--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ analytics:
 # Site Author
 author:
   name             : "Chathuri Jayaweera"
-  avatar           : "/assets/images/npets.jpg"
+  avatar           : "/assets/images/website_pic.jpg"
   bio              : "Graduate Teaching/Research Assistant\n PhD candiate in Computer Science\n University of Florida"
   location         : "Gainesville, FL"
   email            :
