--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   # - title: "Talks"
   #   url: /talks/    
 
-  - title: "Academic"
-    url: /academic/    
+  - title: "Experience"
+    url: /experience/    
     
   # - title: "Portfolio"
   #   url: /portfolio/
