--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ minimal_mistakes_skin    : "chath"
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Chathuri Jayaweera"
+title                    : "Chathuri Jayaweera | චතුරි ජයවීර"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
 name                     : "Chathuri Jayaweera"
