Added name pronounciation guide markers

--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 
 # Site Author
 author:
-  name             : "Chathuri | චතුරි"
+  name             : "Cha·thụ·rị | චතුරි"
   avatar           : "/assets/images/website_pic.jpg"
   bio              : "Graduate Teaching/Research Assistant\n PhD candiate in Computer Science\n University of Florida"
   location         : "Gainesville, FL"
